--- a/index.html
+++ b/index.html
@@ -337,11 +337,9 @@ function showProposal(){
         <div class="container">
             <div class="bigText">
             Na unaaa rombaa rombaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa 
-            robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa 
-            robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa 
-            rombaaa love panraaaaaaaa ❤️❤️❤️❤️❤️❤️❤️😉😉😉😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂
-            🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂💝💖💖💖💝💝💖💗💗💗💗💓💓💓💞💞💞💞💕💕💕❤️❤️❤️❤️❤️‍🩹❤️‍🩹❤️‍🩹❤️‍🩹❤️‍🔥❤️‍🔥❤️‍🔥❣️❣️❣️❣️💖💖
-            💝💝💗💗💓💞💞💕💕❤️❤️💕💞
+            robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa robaaa ombaaa love panraaaaaaaa ❤️❤️❤️❤️❤️❤️❤️
+            😉😉😉😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚😚🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂 🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂🫂💝💖💖
+            💖💝💝💖💗💗💗💗💓💓💓💞💞💞💞💕💕💕❤️❤️❤️❤️❤️‍🩹❤️‍🩹❤️‍🩹❤️‍🩹❤️‍🔥❤️‍🔥❤️‍🔥❣️❣️❣️❣️💖💖💝💝💗💗💓💞💞💕💕❤️❤️💕💞
             </div>
         </div>
         `;
